--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .img {
-    width: 400px;
+    width: 100%;
 }
+
+
+.img {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  /* Top left text */
+.top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+  }
