--- a/style1.css
+++ b/style1.css
@@ -4,7 +4,7 @@ body {
     padding: 20px;
     margin: 20px;
     background-color: #cdd1ca;
-    background:url('./m1.png') no-repeat center center fixed;
+    background:url('./Images/m1.png') no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;   
     /* background-color: blue; */
